# bar

./: .dockerignore  Cargo.toml  Dockerfile  build.sh  readme.md
.github/workflows/: check.yml  test.yml
docs/templating/: fragments.md  getting-started.md  page-templates.md  theme-config.md
libs/gpxtools/: Cargo.toml  readme.md
libs/gpxtools/src/: error.rs  join.rs  lib.rs  main.rs  plot.rs  stats.rs  utils.rs
libs/img2text/: Cargo.toml  readme.md
libs/img2text/src/: error.rs  lib.rs  main.rs
libs/imgtools/: Cargo.toml
libs/imgtools/src/: error.rs  lib.rs
src/: args.rs  async.rs  cache.rs  cloudinary.rs  config.rs  context.rs  diagnostic.rs  error.rs  fragment_services.rs  fs.rs  gallery.rs  gallery_ops.rs  gpx_embed.rs  image_alt.rs  json_feed.rs  main.rs  metadata.rs  pages.rs  posts.rs  renderer.rs  req.rs  site.rs  syntax_highlight.rs  templating.rs  theme.rs
src/defaults/fragments/: bold.html  code.css  code.html  code_span.html  collapsible.css  collapsible.html  embed.css  embed.html  emphasis.html  heading.css  heading.html  highlight.css  highlight.html  icon.css  icon.html  image.css  image.html  images.css  images.html  italic.html  list_item.html  ordered_list.html  paragraph.css  paragraph.html  picture.css  picture.html  strikethrough.html  thematic_break.css  unordered_list.html
src/render/: context.rs  engine.rs  mod.rs
test/fixtures/: config.yaml  test.yamd  test2.yamd
test/fixtures/content/: draft.yamd
test/fixtures/template/: theme.toml
