[package]
name = "bar"
description = "Static web site generator."
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.9.1", features = ["metal"] }
candle-nn = { version = "0.9.1", features = ["metal"] }
candle-transformers = { version = "0.9.1", features = ["metal"] }

[dependencies]
async-recursion = "1.1.1"
bincode = "1.3.3"
clap = { version = "4.5.47", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
crc32fast = "1.5.0"
cloudinary = { version = "0.8.1" }
data-encoding = "2.9.0"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_yaml = "0.9.34"
syntect = { version = "5.2.0", features = ["dump-load"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
yamd = { version = "0.16.2", features = ["serde"] }
tera = { version = "1.20.0", features = ["builtins", "preserve_order"] }
url = { version = "2.5.7", features = ["serde"] }
tokio = { version = "1.47.1", features = ["full"] }
rss = "2.0.12"
numeric-sort = "0.1.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tracing-log = "0.2.0"
itertools = "0.14.0"
candle-core = { version = "0.9.1" }
candle-nn = { version = "0.9.1" }
candle-transformers = { version = "0.9.1" }
tokenizers = { version = "0.22.0" }
image = { version = "0.25.6", features = ["jpeg", "png", "gif", "tiff"] }
hf-hub = { version = "0.4.3" }
reqwest = { version = "0.12.23" }
linked-hash-map = { version = "0.5.6", features = ["serde", "serde_impl"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
