[package]
name = "bar"
description = "Static web site generator."
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.9.1", features = ["metal"] }
candle-nn = { version = "0.9.1", features = ["metal"] }
candle-transformers = { version = "0.9.1", features = ["metal"] }

[workspace]
members = ["libs/img2text", "libs/gpxtools"]

[dependencies.gpxtools]
path = "libs/gpxtools"

[dependencies.img2text]
path = "libs/img2text"

[dependencies]
async-recursion = "1.1.1"
bincode = "1.3.3"
clap = { version = "4.5.57", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
crc32fast = "1.5.0"
cloudinary = { version = "0.8.2" }
data-encoding = "2.10.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_yaml = "0.9.34"
syntect = { version = "5.3.0", features = ["dump-load"] }
serde_json = "1.0.149"
chrono = { version = "0.4.43", features = ["serde"] }
yamd = { version = "0.16.2", features = ["serde"] }
tera = { version = "1.20.1", features = ["builtins", "preserve_order"] }
url = { version = "2.5.8", features = ["serde"] }
tokio = { version = "1.49.0", features = ["full", "rt"] }
rss = "2.0.12"
numeric-sort = "0.1.5"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tracing-log = "0.2.0"
itertools = "0.14.0"
reqwest = { version = "0.13.1" }
linked-hash-map = { version = "0.5.6", features = ["serde", "serde_impl"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
