[package]
name = "bar"
description = "Static web site generator."
version = "0.2.0"
edition = "2024"
rust-version = "1.88.0"

[workspace]
members = ["libs/img2text", "libs/gpxtools"]

[dependencies.gpxtools]
path = "libs/gpxtools"

[dependencies.img2text]
path = "libs/img2text"

[dependencies]
async-stream = "0.3.6"
futures-core = "0.3.32"
tokio-stream = "0.1"
bincode = "1.3.3"
clap = { version = "4.6.1", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
cloudinary = { version = "0.8.2" }
data-encoding = "2.11.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_yaml = "0.9.34"
syntect = { version = "5.3.0", features = ["dump-load"] }
serde_json = "1.0.149"
chrono = { version = "0.4.44", features = ["serde"] }
yamd = { version = "0.19.0", features = ["serde"] }
tera = { version = "1.20.1", features = ["builtins", "preserve_order"] }
url = { version = "2.5.8", features = ["serde"] }
tokio = { version = "1.50.0", features = ["full", "rt"] }
rss = "2.0.12"
numeric-sort = "0.1.5"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tracing-log = "0.2.0"
itertools = "0.14.0"
reqwest = { version = "0.13.2" }
linked-hash-map = { version = "0.5.6", features = ["serde", "serde_impl"] }
seahash = "4.1.0"
miette = { version = "7.6.0", features = ["fancy"] }
semver = "1"
toml = "0.8"

[lints]
workspace = true

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
result_large_err = "allow"

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3"
