[package]
name = "gpxtools"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
directories = "6.0.0"
geo = "0.32.0"
geo-types = "0.7.17"
gpx = "0.10.0"
image = "0.25.8"
reqwest = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
tabled = "0.20.0"
thiserror = "2.0.18"
tiny-skia = "0.12.0"
tokio = { version = "1.49.0", features = ["full"] }
