[package]
name = "gpxtools"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"

[lints]
workspace = true

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
geo = "0.33.1"
geo-types = "0.7.18"
gpx = "0.10.0"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
tabled = "0.20.0"
thiserror = "2.0.18"
tiny-skia = "0.12.0"
tokio = { version = "1.50.0", features = ["full"] }
