[package]
name = "img2text"
version = "0.1.0"
edition = "2024"

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.9.1", features = ["metal"] }
candle-nn = { version = "0.9.1", features = ["metal"] }
candle-transformers = { version = "0.9.1", features = ["metal"] }

[dependencies]
reqwest = { version = "0.12.26", features = [
	"json",
	"multipart",
	"stream",
], optional = true }
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
clap = { version = "4.5.53", features = ["derive"], optional = true }
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = [
	"tracing",
], optional = true }
directories = { version = "6.0.0", optional = true }
hf-hub = "0.4.3"
image = "0.25.9"
tabled = { version = "0.20.0", optional = true }
thiserror = "2.0.17"
tokenizers = "0.22.2"
tokio = { version = "1.48.0", features = ["sync"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", optional = true }
terminal_size = { version = "0.4.3", optional = true }

[features]
cli = [
	"clap",
	"clap-verbosity-flag",
	"directories",
	"reqwest",
	"tabled",
	"terminal_size",
	"tracing-subscriber",
]

[[bin]]
name = "img2text"
path = "src/main.rs"
required-features = ["cli"]
