[package]
name = "img2text"
version = "0.1.0"
edition = "2024"

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.9.2", features = ["metal"] }
candle-nn = { version = "0.9.2", features = ["metal"] }
candle-transformers = { version = "0.9.2", features = ["metal"] }

[dependencies]
reqwest = { version = "0.13.1", features = [
	"json",
	"multipart",
	"stream",
], optional = true }
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
clap = { version = "4.5.60", features = ["derive"], optional = true }
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = [
	"tracing",
], optional = true }
directories = { version = "6.0.0", optional = true }
hf-hub = "0.4.3"
image = "0.25.9"
tabled = { version = "0.20.0", optional = true }
thiserror = "2.0.18"
tokenizers = "0.22.2"
tokio = { version = "1.49.0", features = ["sync"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", optional = true }
terminal_size = { version = "0.4.3", optional = true }
serde_json = { version = "1.0.149", optional = true }
serde = { version = "1.0.228", features = ["derive", "rc"], optional = true }

[features]
cli = [
	"clap",
	"clap-verbosity-flag",
	"directories",
	"reqwest",
	"serde",
	"serde_json",
	"tabled",
	"terminal_size",
	"tracing-subscriber",
]

[[bin]]
name = "img2text"
path = "src/main.rs"
required-features = ["cli"]
